ספירל וואן גוך ותיקונים

--- a/index.html
+++ b/index.html
@@ -383,6 +383,8 @@ Error message and password prompt
 
 <li>וויקליף ז'אן</li>
 
+<li>וינסנט ואן-גוך</li>
+
 <li>ז'נבייב</li>
 
 <li>זקופי הגו</li>
@@ -516,6 +518,8 @@ Error message and password prompt
 <li>סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום</li>
 
 <li>סלק מבושל</li>
+
+<li>ספירל</li>
 
 <li>עוגיות קימל</li>
 
@@ -8453,7 +8457,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[איתן וג'ואל כהן]] המעבדה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[וינסנט ואן-גוך]] [[מחפשת את אירי]] [[קפיץ ספירלי]] ספירל [[שיטת אלכסנדר]] צווארים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8473,7 +8477,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170605203509346" title="$:/temp/search">
+<div created="20161023184814872" modified="20170606221310580" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8755,7 +8759,7 @@ Error message and password prompt
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170531194855479" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20170606170942908" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -8764,7 +8768,7 @@ Error message and password prompt
 
 אתמול הלכתי איתה סתם לטייל בעיר, והיום אנחנו יושבים כל היום סתם בבית, ולועסים את עצמינו לדעת. אולי בגלל שפסחתי על שנות העשרים של חיי, נעים לי לחוות אותן עכשיו עם החבורה חסרת הגיל, אך מהבחינה שאנחנו כל הזמן יחד. [[תמיד יש מישהו בדירה|המשק האוטרקי שלנו]], וזה מאד עוזר כשאתה נפרד מחברה.
 
-אני מביט בה עכשיו. היא מכינה לנו טוסטים. ניסיתי לעזור לה [[אבל היא ביקשה לבד|אירי טוענת]]. היא נעה בשקט זקופה כמו נזיר בקאטת מטבח מערבית. צועדת לעבר המקרר וחוזרת למשטח העבודה. חותכת את הירקות בריכוז, ומניחה אותם על פרוסות הלחם הלבן מהן חתכה את הקשה. מציעה לי קוקטייל אננס טרי ורום. מכינה אותו בבלנדר עם קרח. אחרי שהקוקטייל מוכן היא מוציאה את הטוסטים מהתנור ומניחה אותם על הדלפק. אנחנו יושבים על הדלפק אוכלים ושותים. אני שואל אותה על [[האלכסנדר|שיטת אלכסנדר]] שלה והיא מספרת לי. אני מרגיש איך גופי מתארך כשהיא מדברת. אנחנו שותים ואוכלים והיא מדברת ונעה ברצינות גמורה ועם חיוך. היא מכינה עוד קוקטייל בבלנדר. הפעם היא מוסיפה לו מיץ לימון. תוך כדי שהיא מכינה את הקוקטייל ומנקה את הכלים והכיור, היא ממשיכה לספר לי איך היא חושבת אלכסנדר גם ברגע זה בו היא מדברת איתי. מניחה לצוואר להיות חופשי. [[&quot;כשהתנועות נעשות מתוך המחשבה של ההנחה לצוואר&quot;|קפיץ ספירלי]], היא אומרת לי, &quot;הן יוצאות נכון יותר מן הגוף&quot;.
+אני מביט בה עכשיו. היא מכינה לנו טוסטים. ניסיתי לעזור לה [[אבל היא ביקשה לבד|אירי טוענת]]. היא נעה בשקט זקופה כמו נזיר בקאטת מטבח מערבית. צועדת לעבר המקרר וחוזרת למשטח העבודה. חותכת את הירקות בריכוז, ומניחה אותם על פרוסות הלחם הלבן מהן חתכה את הקשה. מציעה לי קוקטייל אננס טרי ורום. מכינה אותו בבלנדר עם קרח. אחרי שהקוקטייל מוכן היא מוציאה את הטוסטים מהתנור ומניחה אותם על הדלפק. אנחנו יושבים על הדלפק אוכלים ושותים. אני שואל אותה על [[האלכסנדר|שיטת אלכסנדר]] שלה והיא מספרת לי. אני מרגיש איך גופי מתארך ומתרחב כשהיא מדברת. אנחנו שותים ואוכלים והיא מדברת ונעה ברצינות גמורה ועם חיוך. היא מכינה עוד קוקטייל בבלנדר. הפעם היא מוסיפה לו מיץ לימון. תוך כדי שהיא מכינה את הקוקטייל ומנקה את הכלים והכיור, היא ממשיכה לספר לי איך היא חושבת אלכסנדר גם ברגע זה בו היא מדברת איתי. מניחה לצוואר להיות חופשי. [[&quot;כשהתנועות נעשות מתוך המחשבה של ההנחה לצוואר&quot;|קפיץ ספירלי]], היא אומרת לי, &quot;הן יוצאות נכון יותר מן הגוף&quot;.
 
 אני מבקש ממנה, והיא מתקשרת למורה שלה לאלכסנדר וקובעת לי שיעור ראשון.
 
@@ -9292,7 +9296,7 @@ Error message and password prompt
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170415105944150" modified="20170512210536538" title="דינה ז&quot;ל">
+<div created="20170415105944150" modified="20170606192846169" title="דינה ז&quot;ל">
 <pre>[img[pictures/ima-shel-gura.jpg]]
 
 !!![[גורה]]:
@@ -9307,7 +9311,7 @@ Error message and password prompt
 
 כשזה קורה משתנה לי הקול ושפת הדיבור שלי משתנה. אני צועקת ומדברת לא יפה.
 
-אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על אלפרד, וזה נראה פויה. ממש מביך.</pre>
+אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
 </div>
 <div created="20161116210610208" modified="20170605164540478" tags="[[אחות כהן]]" title="דןדן">
 <pre>[img[pictures/dandan.jpg]]
@@ -9577,12 +9581,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ובזאת תמו דברינו לערב זה.
 </pre>
 </div>
-<div created="20170325162001136" modified="20170325193745957" title="הכתיבה">
+<div created="20170325162001136" modified="20170606172312066" title="הכתיבה">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 !!![[גורה]]:
 
-האתר הזה שלנו, שיויו אחי המתוק פתח, הפך להיות לתחנת הניקוז שלי.
+האתר הזה שלנו, [[שיויו|יויו]], אחי המתוק פתח, הפך להיות לתחנת הניקוז שלי.
 
 עד אליו השתדלתי לכתוב סיפורים מסודרים.
 
@@ -9592,7 +9596,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 לפני שהוא נסע, כמעט אף פעם לא הייתה [[כאן|הדירה]] כביסה לכבס, כי [[דןדן]] תמיד חש לעשותה.
 
-אז חוץ מהטיפול השבועי אצל רוז'ה, עבודות בית ובילוי עם אחיותי, אני מטביעה יגוני כאן.
+אז חוץ מהטיפול השבועי אצל [[רוז'ה]], עבודות בית ובילוי עם [[אחיותי|אחות כהן]], אני מטביעה יגוני כאן.
 
 ומודה על כך [[מזוטו לבי|מרינה זוטו]].
 
@@ -10126,6 +10130,24 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
 </div>
+<div created="20170606183630416" modified="20170606221407745" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
+<pre>[img[pictures/van-goch.jpg]]
+
+!!![[גורה]]:
+
+כן, מבחינת גובה האילן, אני מרשה לעצמי לכלול את [[וינסנט היקר|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A0%D7%A1%D7%A0%D7%98_%D7%95%D7%90%D7%9F_%D7%92%D7%95%D7%9A]] ברשימת [[אחיות החוץ|אחיות חוץ]]. [[אנחנו האחיות כהן]] אוהבות להתלות [[באילנות גבוהים|http://www.vangoghgallery.com/index.html]].
+
+כמו כן שמתי כאן ציור אישי שלי, כדי להגיד - ואן גוך [[ממש גרם לי|עם יויו באמסטרדם]] לרצות לצייר.
+
+ציירתי את החדר שלי הענקי - בו נשארתי לבד אחרי [[שדןדן נסע|דןדן נסע]], ורוקנתי אותו כמעט לגמרי.
+
+בחלק שאחרי גב השידה, העמדתי שולחן ענקי, שאלפרד ודןדן בנו. על השולחן נמצא המחשב, בלוקי ציור, עפרונות ציור וכד'. 
+
+אם אני זקוקה למשהו אני שולחת לחברים הודעה [[באתרפאד|http://etherpad.org/]].
+
+
+</pre>
+</div>
 <div created="20161112221314170" modified="20170514230829528" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 ''
@@ -10154,14 +10176,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
 </div>
-<div created="20170527175706471" modified="20170601161824977" tags="[[אירי טוענת]]" title="זקופי הגו">
+<div created="20170527175706471" modified="20170605214948712" tags="[[אירי טוענת]]" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
 
 !!![[גורה]]:
 
 [[אירי]] טוענת, שאלה שבגלגול הזה, מסיימים את התיישרות הגו שלהם, והופכים להיות מהולכי על ארבע להולכי על שתיים, סיימו את העניינים שלהם כאן על הכדור הזה בגלקסיה הזו.
 
-היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו.</pre>
+היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו וגם [[פה]].</pre>
 </div>
 <div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
 <pre>[img[pictures/chomarim.jpg]]
@@ -11574,6 +11596,22 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
+<div created="20170606204237997" modified="20170606215800358" tags="[[אירי טוענת]]" title="ספירל">
+<pre>[img[pictures/spiral.jpg]]
+
+!!![[אירי]]:
+
+[[אצל מרתה גרהם|https://en.wikipedia.org/wiki/Martha_Graham]], התנועה הספירלית של הגו, היא אחת מתנועות הבסיס [[בטכניקת המחול שיצרה|https://en.wikipedia.org/wiki/Graham_technique]].
+
+בישיבה, התנועה הספירלית מתחילה מהאגן, ממשיכה עם בית החזה ואחריו [[הצוור|צווארים]].
+
+אצל מרתה לא נועלים נעלי בלט, הזרועות פתוחות, כף הרגל הקדמית ב&quot;פלקס&quot;.
+
+
+מועילה מאד החשיבה [[האלכסנדרונית|שיטת אלכסנדר]], להפחתת נזקי קשיחות הטכניקות הקשוחות.
+
+</pre>
+</div>
 <div created="20170407192128538" modified="20170412203414991" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגיות קימל">
 <pre>[img[pictures/ugiyot-kimel.jpg]]
 
@@ -11789,7 +11827,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170601232601606" modified="20170605132302510" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20170606192626683" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
@@ -11798,7 +11836,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אין מה לבוא לאדם בטענות על כך שהלך, זה מותר, לכל הצדדים. כן, צריכים להיות הגונים, כל הצדדים, גם מי שנשאר כועס, צריך להיות הוגן והגון - כנראה שקודם כל עם עצמו.
 
-היה קר, הסתובבנו מעט, דיברנו הרבה, לנו סמוך [[לוונדלפארק|https://en.wikipedia.org/wiki/Vondelpark]] ולאזור המוזיאונים. המקום היחידי שממש רציתי לבקר בו היה [[מוזיאון ואן-גוך|https://en.wikipedia.org/wiki/Van_Gogh_Museum]]. פרט לכאב המכאיב הניכר מציוריו של וינסנט היקר, שיושב כואב ומצייר עוד ועוד, את עצמו, את בית הוריו, את הטבע, את האנשים, ובתור אדם שמצא נתיב בריחה לכאביו בכתיבה, קינאתי באפשרות להעביר תמונה שלימה בלי להזדקק למילים.
+היה קר, הסתובבנו מעט, דיברנו הרבה, לנו סמוך [[לוונדלפארק|https://en.wikipedia.org/wiki/Vondelpark]] ולאזור המוזיאונים. המקום היחידי שממש רציתי לבקר בו היה [[מוזיאון ואן-גוך|https://en.wikipedia.org/wiki/Van_Gogh_Museum]]. פרט [[לכאב המכאיב|וינסנט ואן-גוך]] המורגש בציוריו של וינסנט היקר, שיושב ומצייר עוד ועוד, את עצמו, את בית הוריו, את הטבע, את האנשים, ובתור אדם שמצא נתיב בריחה לכאביו בכתיבה, קינאתי באפשרות להעביר תמונה שלימה בלי להזדקק למילים.
 
 כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
 
@@ -12072,7 +12110,7 @@ __אופן ההכנה____
 
 וכולם נהנים מאד.</pre>
 </div>
-<div created="20170324140205427" modified="20170523211451822" tags="[[אחות כהן]]" title="פה">
+<div created="20170324140205427" modified="20170605215047245" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/fa.jpg]]
 
 !!![[יויו]]:
@@ -12081,11 +12119,11 @@ __אופן ההכנה____
 
 אביו הגיע רווק לפריז, וחיש חש הכיר את אמו, שעבדה ועדיין עובדת במרכז הקליטה, כעובדת סוציאלית.
 
-פה הוא חכם, מקסים ונדיב.
+פה הוא חכם, מקסים ונדיב. 
+הוא מסיים תואר שני במחשבים.
 
-יותר מקצרה היריעה מלהכיל מילות התפעמות ממנו ומהחבורה כולה.
-
-הוא מסיים תואר שני במחשבים והוא מלך.</pre>
+יותר מקצרה היריעה מלהכיל מילות התפעמות ממנו ומהחבורה כולה. אירי טוענת כי הוא [[זקוף גו|זקופי הגו]].
+</pre>
 </div>
 <div created="20170419212629057" modified="20170504140039659" title="פוליטיקאי">
 <pre>[img[pictures/politician.jpg]]
@@ -12432,16 +12470,16 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170601134704239" modified="20170601204108558" tags="[[אירי טוענת]]" title="קפיץ ספירלי">
+<div created="20170601134704239" modified="20170606215153088" tags="[[אירי טוענת]]" title="קפיץ ספירלי">
 <pre>[img[pictures/kfitz-spirali.jpg]]
 
 [[אירי]]:
 
 הגוף שלנו משוכלל, בין השאר, ביכולתו לנוע בחכמה ובגמישות, ולבלום זעזועים.
 
-לאורכו קשתות קעורות וקמורות, החל בקשת כף הרגל, שגודלה תלוי במיקום האחזות גיד אכילס, דרך הקרסול, הברכיים, מפרק הירך, המותנית והצוואר - כל אלה מהווים בולם זעזועים קפיצי, שיכול לנוע גם בתנועה אופקית.
+לאורכו קשתות קעורות וקמורות, החל בקשת כף הרגל, שגודלה תלוי במיקום האחזות גיד אכילס, דרך הקרסול, הברכיים, מפרק הירך, המותנית והצוואר - כל אלה מהווים בולם זעזועים קפיצי, שיכול לנוע גם בתנועה [[ספירלית|ספירל]] סביב אותו ציר אנכי.
 
-[[בשיעורי האלכסנדר|שיטת אלכסנדר]], לומדים לכוון, להניח לצוואר להיות חופשי, לרווח בין מפרק למפרק, ובכך, בין השאר, לשמור על הקפיץ הספירלי, ולנוע ביתר קלות קדימה ולמעלה.
+[[בשיעורי האלכסנדר|שיטת אלכסנדר]], לומדים לכוון, [[להניח לצוואר להיות חופשי|צווארים]], לרווח בין מפרק למפרק, ובכך, בין השאר, לשמור על הקפיץ הספירלי, ולנוע ביתר קלות קדימה ולמעלה.
 
 
 </pre>
@@ -12744,13 +12782,13 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20161206222443036" modified="20170603232519250" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20170606171349561" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
 
 
-בנערותי סבלתי מכאבי גב חזקים, שהתבררו כעקמת, שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו  12 סנטימטרים לגובהי, שהגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]].  
+בנערותי סבלתי מכאבי גב חזקים, שהתבררו כעקמת, שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו  12 סנטימטרים לגובהי, שנעצר ב- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים, וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]].  
 
 [[אלכסנדר|פ.מ.אלכסנדר]]  שלקה בקולו גילה, שהדבר נובע מליקוי בהתנהגותו הגופנית והנפשית. 
 
@@ -12878,12 +12916,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170401223255295" modified="20170417190509053" tags="[[אחות כהן]]" title="תומר">
+<div created="20170401223255295" modified="20170606192747236" tags="[[אחות כהן]]" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
 
-כשבאנו מפריז להלוויה של אימא שלנו, גורה ואני, ומיד אחר כך אבא סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
+כשבאנו מפריז להלוויה של [[אימא שלנו|דינה ז&quot;ל]], [[גורה]] ואני, ומיד אחר כך אבא סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
 
 אנחנו חברים מהגנון.
 
