--- a/index.html
+++ b/index.html
@@ -8457,7 +8457,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[וינסנט ואן-גוך]] [[מחפשת את אירי]] [[קפיץ ספירלי]] ספירל [[שיטת אלכסנדר]] צווארים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[וינסנט ואן-גוך]] [[דןדן נסע]] [[עם יויו באמסטרדם]] [[אחיות חוץ]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10130,12 +10130,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
 </div>
-<div created="20170606183630416" modified="20170606221407745" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
+<div created="20170606183630416" modified="20170606222915750" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
 
 !!![[גורה]]:
 
-כן, מבחינת גובה האילן, אני מרשה לעצמי לכלול את [[וינסנט היקר|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A0%D7%A1%D7%A0%D7%98_%D7%95%D7%90%D7%9F_%D7%92%D7%95%D7%9A]] ברשימת [[אחיות החוץ|אחיות חוץ]]. [[אנחנו האחיות כהן]] אוהבות להתלות [[באילנות גבוהים|http://www.vangoghgallery.com/index.html]].
+כן, מבחינת גובה האילן, אני מרשה לעצמי לכלול את [[וינסנט היקר|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A0%D7%A1%D7%A0%D7%98_%D7%95%D7%90%D7%9F_%D7%92%D7%95%D7%9A]] ברשימת [[אחיות החוץ|אחיות חוץ]]. [[אנחנו|האחיות כהן]] אוהבות להתלות [[באילנות גבוהים|http://www.vangoghgallery.com/index.html]].
 
 כמו כן שמתי כאן ציור אישי שלי, כדי להגיד - ואן גוך [[ממש גרם לי|עם יויו באמסטרדם]] לרצות לצייר.
 
