--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@ Error message and password prompt
 
 <li>$:/state/Excise/-392760529/new-title</li>
 
+<li>$:/state/folded/English</li>
+
 <li>$:/state/folded/ברוכים הבאים</li>
 
 <li>$:/state/folded/המעבדה</li>
-
-<li>$:/state/folded/English</li>
 
 <li>$:/state/Link/--15630481/search</li>
 
@@ -230,6 +230,20 @@ Error message and password prompt
 <li>$:/UploadName</li>
 
 <li>$:/UploadURL</li>
+
+<li>bg</li>
+
+<li>English</li>
+
+<li>HH</li>
+
+<li>imagine</li>
+
+<li>logo-bg</li>
+
+<li>MyStyles</li>
+
+<li>RTLStylesheet</li>
 
 <li>אהבה</li>
 
@@ -327,9 +341,9 @@ Error message and password prompt
 
 <li>האומנית</li>
 
-<li>האחיות כהן</li>
-
 <li>האחיות K</li>
+
+<li>האחיות כהן</li>
 
 <li>האסיפה הראשונה</li>
 
@@ -630,22 +644,6 @@ Error message and password prompt
 <li>תרנגול הודו אפוי</li>
 
 <li>תשבץ למאומנים</li>
-
-<li>bg</li>
-
-<li>Draft of 'ספירל'</li>
-
-<li>English</li>
-
-<li>HH</li>
-
-<li>imagine</li>
-
-<li>logo-bg</li>
-
-<li>MyStyles</li>
-
-<li>RTLStylesheet</li>
 
 </ul>
 </p>
@@ -8363,8 +8361,8 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20161024051755782" modified="20170607195627219" title="$:/palette">
-<pre>$:/palettes/ContrastLight</pre>
+<div created="20161024051755782" modified="20170607230257714" title="$:/palette">
+<pre>$:/palettes/DarkPhotos</pre>
 </div>
 <div created="20170501185408669" modified="20170515201916118" tags="LTR $:/tags/PageTemplate" title="$:/plugins/coensisters/cc-banner">
 <pre>&lt;a class=&quot;cc-banner&quot; target=&quot;_blank&quot; title=&quot;Coen Sisters by Tamar Leselrot is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.&quot; rel=&quot;license&quot; href=&quot;http://creativecommons.org/licenses/by-nc-sa/4.0/&quot;&gt;&lt;img alt=&quot;Creative Commons License&quot; style=&quot;border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot; /&gt;&lt;/a&gt;</pre>
@@ -8415,13 +8413,13 @@ Error message and password prompt
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
+<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
+<pre>show</pre>
+</div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
 </div>
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
-<pre>show</pre>
-</div>
-<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
 <pre>show</pre>
 </div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
@@ -8436,14 +8434,14 @@ Error message and password prompt
 <div created="20161023182522696" modified="20170409202455527" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20170607194926720" modified="20170607194926720" title="$:/state/ShowPaletteEditor">
-<pre>yes</pre>
+<div created="20170607194926720" modified="20170607230225151" title="$:/state/ShowPaletteEditor">
+<pre>no</pre>
 </div>
 <div created="20161024052836465" modified="20161024094639906" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
-<div created="20161024060656733" modified="20170607195647884" title="$:/state/tab--1963855381">
-<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+<div created="20161024060656733" modified="20170607230153426" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
 <div created="20161024183504050" modified="20161024183510224" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -8466,7 +8464,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'ספירל']] [[וינסנט ואן-גוך]] [[עם יויו באמסטרדם]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8618,6 +8616,108 @@ Error message and password prompt
 </div>
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
+</div>
+<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
+<pre>This item is in English.
+
+You see it written left to right because it is tagged `LTR` (uppercase).
+
+@@.rtl
+גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
+@@</pre>
+</div>
+<div created="20161024200912852" modified="20170508145654960" tags="" title="HH">
+<pre>! Happy Hour
+
+!!![[גורה]]: 
+
+''שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי:
+''
+
+
+[img[pictures/hh.jpg]]
+
+שמונה פרקים המתארים את המתרחש בחיי עובדי, דיירי ועוברי האורח שבבניין. כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
+במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה).
+[[המצלמה]] היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
+היא מסתכלת בעין אוהבת על שלום, [[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
+ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
+אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת המצלמה כל טיפוס יכול להפוך [[לאחות|אחות כהן]] לרגעים או באופן קבוע.
+
+בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע, EA  שמו, שלובש גם הוא, דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
+מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
+המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
+למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
+בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
+אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
+
+
+&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;</pre>
+</div>
+<div created="20170504194252766" modified="20170505161130429" title="imagine">
+<pre>[img[pictures/imagine.jpg]]
+
+[[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
+</div>
+<div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
+<pre>.left { text-align: left }
+.center { text-align: center }
+.right { text-align: right }
+.ltr { direction: ltr }
+.rtl,
+.tc-edit-texteditor,
+.tc-tiddler-preview-preview { direction: rtl }</pre>
+</div>
+<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
+<pre>.tc-tiddler-title,
+.tc-tags-wrapper,
+.tc-tiddler-body,
+.tc-site-title,
+.tc-site-subtitle,
+.tc-timeline
+{
+    direction: rtl;
+}
+
+.tc-timeline
+{
+    text-align: left
+}
+
+.tc-site-title,
+.tc-site-subtitle
+{
+    padding-right: 8px
+}
+
+.tc-tiddler-frame .tc-tiddler-controls {
+    float: left;
+}
+
+/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
+
+.tc-tagged-LTR .tc-tiddler-title,
+.tc-tagged-LTR .tc-tags-wrapper,
+.tc-tagged-LTR .tc-tiddler-body,
+.tc-tiddler-system .tc-tiddler-title,
+.tc-tiddler-system .tc-tags-wrapper,
+.tc-tiddler-system .tc-tiddler-body
+{
+    direction: ltr;
+}
+
+.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
+.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
+
+{
+    float: right;
+}</pre>
 </div>
 <div created="20170112164936113" modified="20170512224008545" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
@@ -9407,6 +9507,14 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20170320161241857" modified="20170507182303529" tags="HH" title="האחיות K">
+<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+
+!!![[גורה]]:
+
+K-SISTER [[לעולם תהיה|HH]] K-SISTER
+</pre>
+</div>
 <div created="20161111215423587" modified="20170523152704663" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
@@ -9433,14 +9541,6 @@ Error message and password prompt
 
 
 
-</pre>
-</div>
-<div created="20170320161241857" modified="20170507182303529" tags="HH" title="האחיות K">
-<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
-
-!!![[גורה]]:
-
-K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20170504162635914" modified="20170527162543397" title="האסיפה הראשונה">
@@ -13019,124 +13119,6 @@ Fapina''
 |''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''A''|''&amp;#9608;''|''נ''|
 |''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''N''|''O''|''S''|
 </pre>
-</div>
-<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
-<pre></pre>
-</div>
-<div created="20170606204237997" draft.of="ספירל" draft.title="ספירל" modified="20170607204616240" tags="[[אירי טוענת]]" title="Draft of 'ספירל'">
-<pre>[img[pictures/spiral.jpg]]
-
-!!![[אירי]]:
-
-[[אצל מרתה גרהם|https://en.wikipedia.org/wiki/Martha_Graham]], התנועה הספירלית של הגו, היא אחת מתנועות הבסיס [[בטכניקת המחול שיצרה|https://en.wikipedia.org/wiki/Graham_technique]].
-
-בישיבה, התנועה הספירלית מתחילה מהאגן, ממשיכה עם בית החזה ואחריו [[הצווtר|צווארים]].
-
-אצל מרתה לא נועלים נעלי בלט, הזרועות פתוחות, כף הרגל הקדמית ב&quot;פלקס&quot;.
-
-
-מועילה מאד החשיבה [[האלכסנדרונית|שיטת אלכסנדר]], להפחתת נזקי קשיחות הטכניקות הקשוחות.
-
-</pre>
-</div>
-<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
-<pre>This item is in English.
-
-You see it written left to right because it is tagged `LTR` (uppercase).
-
-@@.rtl
-גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
-@@</pre>
-</div>
-<div created="20161024200912852" modified="20170508145654960" tags="" title="HH">
-<pre>! Happy Hour
-
-!!![[גורה]]: 
-
-''שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי:
-''
-
-
-[img[pictures/hh.jpg]]
-
-שמונה פרקים המתארים את המתרחש בחיי עובדי, דיירי ועוברי האורח שבבניין. כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
-במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה).
-[[המצלמה]] היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
-היא מסתכלת בעין אוהבת על שלום, [[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
-ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
-אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת המצלמה כל טיפוס יכול להפוך [[לאחות|אחות כהן]] לרגעים או באופן קבוע.
-
-בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע, EA  שמו, שלובש גם הוא, דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
-מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
-המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
-למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
-בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
-אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
-
-
-&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;</pre>
-</div>
-<div created="20170504194252766" modified="20170505161130429" title="imagine">
-<pre>[img[pictures/imagine.jpg]]
-
-[[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
-</div>
-<div _canonical_uri="pictures/newbg.jpg" created="20170607193119061" modified="20170607200646736" tags="" title="logo-bg" type="image/jpeg">
-<pre></pre>
-</div>
-<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
-<pre>.left { text-align: left }
-.center { text-align: center }
-.right { text-align: right }
-.ltr { direction: ltr }
-.rtl,
-.tc-edit-texteditor,
-.tc-tiddler-preview-preview { direction: rtl }</pre>
-</div>
-<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
-<pre>.tc-tiddler-title,
-.tc-tags-wrapper,
-.tc-tiddler-body,
-.tc-site-title,
-.tc-site-subtitle,
-.tc-timeline
-{
-    direction: rtl;
-}
-
-.tc-timeline
-{
-    text-align: left
-}
-
-.tc-site-title,
-.tc-site-subtitle
-{
-    padding-right: 8px
-}
-
-.tc-tiddler-frame .tc-tiddler-controls {
-    float: left;
-}
-
-/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
-
-.tc-tagged-LTR .tc-tiddler-title,
-.tc-tagged-LTR .tc-tags-wrapper,
-.tc-tagged-LTR .tc-tiddler-body,
-.tc-tiddler-system .tc-tiddler-title,
-.tc-tiddler-system .tc-tags-wrapper,
-.tc-tiddler-system .tc-tiddler-body
-{
-    direction: ltr;
-}
-
-.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
-.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
-
-{
-    float: right;
-}</pre>
 </div>
 
 </div>
