משפחת באומן, אבא יואל, תיוג המשפחה, החלפת תמונת השאלון ותיקונים

--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@ Error message and password prompt
 
 <li>$:/UploadURL</li>
 
+<li>אבא יואל</li>
+
 <li>אהבה</li>
 
 <li>אודליה</li>
@@ -490,6 +492,8 @@ Error message and password prompt
 <li>מרק</li>
 
 <li>מרק כתום בסיר גדול</li>
+
+<li>משפחת באומן</li>
 
 <li>משתדלים לא להגזים</li>
 
@@ -8361,8 +8365,8 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20161024051755782" modified="20170607230257714" title="$:/palette">
-<pre>$:/palettes/DarkPhotos</pre>
+<div created="20161024051755782" modified="20170608170002260" title="$:/palette">
+<pre>$:/palettes/Muted</pre>
 </div>
 <div created="20170501185408669" modified="20170515201916118" tags="LTR $:/tags/PageTemplate" title="$:/plugins/coensisters/cc-banner">
 <pre>&lt;a class=&quot;cc-banner&quot; target=&quot;_blank&quot; title=&quot;Coen Sisters by Tamar Leselrot is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.&quot; rel=&quot;license&quot; href=&quot;http://creativecommons.org/licenses/by-nc-sa/4.0/&quot;&gt;&lt;img alt=&quot;Creative Commons License&quot; style=&quot;border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot; /&gt;&lt;/a&gt;</pre>
@@ -8464,7 +8468,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שאלון האחיות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אבא יואל]] [[דינה ז&quot;ל]] יויו [[בחוות החיות]] נדיה גורה קרן גיגי [[שאלון האחיות]] [[משפחת באומן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8484,7 +8488,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170607202153037" title="$:/temp/search">
+<div created="20161023184814872" modified="20170608211301126" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8616,6 +8620,23 @@ Error message and password prompt
 </div>
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
+</div>
+<div created="20170608165812345" modified="20170608213231192" tags="[[משפחת באומן]]" title="אבא יואל">
+<pre>[img[pictures/aba-vetirza.jpg]]
+
+!!![[יויו]]:
+
+אבא יואל באומן, מאז נפטרה [[אימנו|דינה ז&quot;ל]], מגיע בגוש אחד עם רעייתו היקרה - באמת היקרה - תרצה באומן.
+
+אני מאד מסמפט את תרצה, שהפכה את אבא לאדם נסבל וסובלני הרבה יותר ממה שהיה.
+
+בסך הכל אבא הוא עוד אדם מבוהל מהחיים האלה, ועל כך, לא אאשים אף אחד.
+
+הוא השתדל כפי יכולתו לגדל [[אותנו|משפחת באומן]] כאנשים טובים, וברוב המקרים הוא אפילו הצליח.
+
+
+
+</pre>
 </div>
 <div created="20170112164936113" modified="20170512224008545" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
@@ -9031,7 +9052,7 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170425194155286" modified="20170601161845127" title="בחוות החיות">
+<div created="20170425194155286" modified="20170608171917990" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9147,7 +9168,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170514201331333" tags="[[נאמני הגנזך]] [[אחות כהן]]" title="גורה">
+<div created="20161026214951927" modified="20170608171046105" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]]" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -9165,7 +9186,7 @@ Error message and password prompt
 
 וגם עכשיו - מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.</pre>
 </div>
-<div created="20170401203113923" modified="20170401214833936" title="גיגי">
+<div created="20170401203113923" modified="20170608171008453" tags="[[משפחת באומן]]" title="גיגי">
 <pre>[img[pictures/gigi.jpg]]
 
 !!![[יויו]]:
@@ -9303,7 +9324,7 @@ Error message and password prompt
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170415105944150" modified="20170606192846169" title="דינה ז&quot;ל">
+<div created="20170415105944150" modified="20170608172105378" tags="[[משפחת באומן]]" title="דינה ז&quot;ל">
 <pre>[img[pictures/ima-shel-gura.jpg]]
 
 !!![[גורה]]:
@@ -9405,7 +9426,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170523152704663" title="האחיות כהן">
+<div created="20161111215423587" modified="20170608170857091" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -9418,7 +9439,7 @@ Error message and password prompt
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
-לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, [[תמיד אהבתי|כשהיו מעט מכוניות]] להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם אבי ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא, ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה, והיה לה ראש מאד מעניין, והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר, ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
+לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, [[תמיד אהבתי|כשהיו מעט מכוניות]] להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם [[אבי|אבא יואל]] ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא, ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה, והיה לה ראש מאד מעניין, והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר, ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
 
 או כמו שגורה ואני כתבנו בשעתו, כשגרתי [[בין האלונים|המעבדה]].
 
@@ -9471,12 +9492,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)</pre>
 </div>
-<div created="20170505224151892" modified="20170505230126837" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
+<div created="20170505224151892" modified="20170608160422430" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
 
 !!![[יויו]]:
 
-כשהדוד הגיע אלינו, די מהר, [[הכל התחיל להסתדר במקום|https://thedod.github.io/]].</pre>
+כשהדוד הגיע אלינו, די מהר, [[הכל התחיל להסתדר במקום|https://thedod.github.io/]]. 
+
+</pre>
 </div>
 <div created="20161112194346716" modified="20170605164505357" title="הדירה">
 <pre>''הסקיצה ראשונית של יויו לדירה הריקה''
@@ -10323,7 +10346,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, יד ימין אינה יודעת, מה יד שמאל עושה. (ולהיפך).</pre>
 </div>
-<div created="20161026214908307" modified="20170514214541113" tags="[[נאמני הגנזך]] [[אחות כהן]]" title="יויו">
+<div created="20161026214908307" modified="20170608172028446" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]]" title="יויו">
 <pre>!!![[אירי]]:
 
 [img[pictures/yoyo.jpg]]
@@ -11414,6 +11437,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170608171939614" modified="20170608212601085" title="משפחת באומן">
+<pre>[img[pictures/baumans.jpg]]
+
+!!![[יויו]]:
+זה חלק מסלון הבית בכפר בו [[גדלנו|הסיפור על גורה, שסופר לאווה, על ידי יויו]] לתפארת, עם אבא יואל ואימא דינה ז&quot;ל.
+נדיה הבכורה, קרן, אני, גיגי וגורה הקטנה והמתוקה.
+
+&lt;&lt;list-links filter:&quot;[tag[משפחת באומן]]&quot;&gt;&gt;</pre>
+</div>
 <div created="20170527144129954" modified="20170527144728501" tags="[[בחוות החיות]]" title="משתדלים לא להגזים">
 <pre>[img[pictures/lo-chazirit.jpg]]
 
@@ -11435,7 +11467,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112193700442" modified="20170330001135924" title="נדיה">
+<div created="20170112193700442" modified="20170608171108983" tags="[[משפחת באומן]]" title="נדיה">
 <pre>[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
 
 !!![[יויו]]:
@@ -12491,7 +12523,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170401220808061" modified="20170401221320005" title="קרן">
+<div created="20170401220808061" modified="20170608171028060" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
 
 !!![[יויו]]:
@@ -12923,12 +12955,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170401223255295" modified="20170606192747236" tags="[[אחות כהן]]" title="תומר">
+<div created="20170401223255295" modified="20170608165748598" tags="[[אחות כהן]]" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
 
-כשבאנו מפריז להלוויה של [[אימא שלנו|דינה ז&quot;ל]], [[גורה]] ואני, ומיד אחר כך אבא סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
+כשבאנו מפריז להלוויה של [[אימא שלנו|דינה ז&quot;ל]], [[גורה]] ואני, ומיד אחר כך [[אבא|אבא יואל]] סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
 
 אנחנו חברים מהגנון.
 
